replace colors indigo60 and indigo70 with surface_container and surface_container_low

--- a/app/src/main/res/drawable/av_connect_to_cancel.xml
+++ b/app/src/main/res/drawable/av_connect_to_cancel.xml
@@ -33,7 +33,7 @@
                     android:duration="@integer/default_transition_anim_duration"
                     android:propertyName="fillColor"
                     android:valueFrom="@color/primary"
-                    android:valueTo="@color/indigo60" />
+                    android:valueTo="@color/surface_container" />
             </set>
         </aapt:attr>
     </target>
