--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -3,5 +3,5 @@
     <size
         android:width="1dp"
         android:height="2dp" />
-    <solid android:color="@color/indigo60" />
+    <solid android:color="@color/surface_container" />
 </shape>
