--- a/app/src/main/res/drawable/av_cancel_to_stop.xml
+++ b/app/src/main/res/drawable/av_cancel_to_stop.xml
@@ -12,7 +12,7 @@
             <group>
                 <path
                     android:name="round-shape"
-                    android:fillColor="@color/indigo60"
+                    android:fillColor="@color/surface_container"
                     android:pathData="M37,0L106,0A28,28 0,0 1,134 28L134,60A28,28 0,0 1,106 88L37,88A28,28 0,0 1,9 60L9,28A28,28 0,0 1,37 0z" />
                 <group>
                     <path
@@ -65,7 +65,7 @@
                 <objectAnimator
                     android:duration="@integer/default_transition_anim_duration"
                     android:propertyName="fillColor"
-                    android:valueFrom="@color/indigo60"
+                    android:valueFrom="@color/surface_container"
                     android:valueTo="@color/red30" />
             </set>
         </aapt:attr>
