--- a/app/src/main/res/drawable/bg_bottomsheet_container.xml
+++ b/app/src/main/res/drawable/bg_bottomsheet_container.xml
@@ -3,6 +3,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="@color/indigo70"/>
+    <solid android:color="@color/surface_container_low"/>
     <corners android:topLeftRadius="12dp" android:topRightRadius="12dp"/>
 </shape>
