--- a/app/src/main/res/drawable/bg_pull_container.xml
+++ b/app/src/main/res/drawable/bg_pull_container.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="@color/indigo90"/>
+    <solid android:color="@color/on_surface_variant"/>
     <corners android:radius="2dp"/>
     <size android:width="32dp" android:height="4dp"/>
 </shape>
