--- a/app/src/main/res/drawable/round_up_stat_bg.xml
+++ b/app/src/main/res/drawable/round_up_stat_bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/indigo70"/>
+    <solid android:color="@color/surface_container_low"/>
     <corners
         android:bottomLeftRadius="24dp"
         android:bottomRightRadius="24dp"
