--- a/app/src/main/res/drawable/select_bottom_nav_config.xml
+++ b/app/src/main/res/drawable/select_bottom_nav_config.xml
@@ -11,7 +11,7 @@
                         android:height="28dp"
                         android:viewportWidth="60"
                         android:viewportHeight="28">
-                        <path android:fillColor="@color/indigo60" android:pathData="M14,0L46,0A14,14 0,0 1,60 14L60,14A14,14 0,0 1,46 28L14,28A14,14 0,0 1,0 14L0,14A14,14 0,0 1,14 0z" />
+                        <path android:fillColor="@color/surface_container" android:pathData="M14,0L46,0A14,14 0,0 1,60 14L60,14A14,14 0,0 1,46 28L14,28A14,14 0,0 1,0 14L0,14A14,14 0,0 1,14 0z" />
                     </vector>
 
                 </aapt:attr>
