adapt colors to material3 color scheme, remove deprecated layout files referencing previously used but now derprecated colors

--- a/app/src/main/res/color/toggle_tint_color.xml
+++ b/app/src/main/res/color/toggle_tint_color.xml
@@ -1,6 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/white" android:state_checked="true" android:state_enabled="true"/>
-    <item android:color="@color/white" android:state_checked="true" android:state_enabled="false"/>
+    <item android:color="@color/on_surface" android:state_checked="true" android:state_enabled="true"/>
+    <item android:color="@color/on_surface" android:state_checked="true" android:state_enabled="false"/>
     <item android:color="@color/surface_container_low" android:state_enabled="false"/>
     <item android:color="@color/surface_container_low"/>
 </selector>
