--- a/app/src/main/res/layout/include_guide_frame.xml
+++ b/app/src/main/res/layout/include_guide_frame.xml
@@ -39,7 +39,7 @@
                 android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:text="@string/title_guide"
-                android:textColor="@android:color/white"
+                android:textColor="@color/on_surface"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.566"
                 app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="32dp"
                 android:text="@string/guide_bullet_head_1"
-                android:textColor="@android:color/white"
+                android:textColor="@color/on_surface"
                 android:textFontWeight="550"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -89,7 +89,7 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:text="@string/guide_bullet_head_2"
-                android:textColor="@android:color/white"
+                android:textColor="@color/on_surface"
                 android:textFontWeight="550"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -119,7 +119,7 @@
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="40dp"
                 android:text="@string/guide_bullet_text_2"
-                android:textColor="@android:color/white"
+                android:textColor="@color/on_surface"
                 app:layout_constraintBottom_toTopOf="@+id/bt_got_it"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -151,7 +151,7 @@
                 android:layout_marginBottom="24dp"
                 android:onClick="@{() -> viewModel.setGuideInvisible()}"
                 android:text="@string/guide_got_it"
-                android:textColor="@color/blue30"
+                android:textColor="@color/tertiary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
