--- a/app/src/main/res/color/super_toggle_text_color.xml
+++ b/app/src/main/res/color/super_toggle_text_color.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:color="@color/superSwitchTextColorSecondary"/>
-    <item android:color="@color/textOnPrimary"/> <!-- anything else -->
+    <item android:state_checked="true" android:color="@color/inverse_on_surface"/>
+    <item android:color="@color/on_surface"/> <!-- anything else -->
 </selector>
