--- a/app/src/main/res/drawable/round_exit_bg.xml
+++ b/app/src/main/res/drawable/round_exit_bg.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/blue30" />
+    <solid android:color="@color/tertiary" />
     <corners android:radius="80dp" />
 </shape>
