--- a/app/src/main/res/drawable/round_material_edittext_outline.xml
+++ b/app/src/main/res/drawable/round_material_edittext_outline.xml
@@ -3,7 +3,7 @@
         <corners
             android:radius="8dp"
             />
-        <stroke android:color="@color/purple40"
+        <stroke android:color="@color/primary"
             android:width="2dp"
             />
     </shape>
