--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:background="@color/purpleDark"
+            tools:background="@color/surface"
             >
             <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
