--- a/app/src/main/res/layout/fragment_bridgebot.xml
+++ b/app/src/main/res/layout/fragment_bridgebot.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:background="@color/purpleDark"
+        android:background="@color/surface"
         tools:context="org.torproject.vpn.ui.approuting.AppRoutingFragment">
 
         <androidx.constraintlayout.widget.Guideline
@@ -61,7 +61,7 @@
                 android:paddingTop="8dp"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:background="@color/purpleDark"
+                android:background="@color/surface"
                 android:minHeight="?attr/actionBarSize"
                 android:theme="?attr/actionBarTheme"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +70,7 @@
                 app:title="@string/bridge_bot"
                 app:titleCentered="true"
                 app:titleTextAppearance="@style/connection_toolbar_title"
-                app:titleTextColor="@color/textOnPrimary"
+                app:titleTextColor="@color/on_surface"
                 app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
         </com.google.android.material.appbar.AppBarLayout>
 
