--- a/app/src/main/res/layout/fragment_bridgelines.xml
+++ b/app/src/main/res/layout/fragment_bridgelines.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:background="@color/purpleDark"
+        android:background="@color/surface"
         tools:context="org.torproject.vpn.ui.bridgesettings.BrideLinesFragment">
 
         <com.google.android.material.appbar.AppBarLayout
@@ -122,7 +122,7 @@
                             android:inputType="textMultiLine"
                             android:paddingHorizontal="@dimen/default_padding"
                             android:paddingBottom="@dimen/default_padding"
-                            android:textColor="?colorOnPrimary"
+                            android:textColor="@color/on_surface"
                             android:textCursorDrawable="@drawable/edittext_cursor"
                             tools:text="obfs4blub" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
