--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -141,7 +141,7 @@
                             android:layout_width="2dp"
                             android:layout_height="28dp"
                             android:layout_marginEnd="4dp"
-                            android:background="@color/indigo50"
+                            android:background="@color/outline"
                             app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
                             app:layout_constraintEnd_toStartOf="@+id/ic_connection_settings"
                             app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
