--- a/app/src/main/res/layout/fragment_generalsettings.xml
+++ b/app/src/main/res/layout/fragment_generalsettings.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        android:background="@color/purpleDark"
+        android:background="@color/surface"
         tools:context="org.torproject.vpn.ui.approuting.AppRoutingFragment">
 
         <com.google.android.material.appbar.AppBarLayout
