--- a/app/src/main/res/layout/include_connection_stats.xml
+++ b/app/src/main/res/layout/include_connection_stats.xml
@@ -22,7 +22,7 @@
         android:paddingTop="24dp"
         android:paddingEnd="16dp"
         android:paddingBottom="16dp"
-        tools:background="@color/purpleDark">
+        tools:background="@color/surface">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_up_stat"
@@ -216,7 +216,7 @@
                 android:layout_width="2dp"
                 android:layout_height="28dp"
                 android:layout_marginEnd="12dp"
-                android:background="@color/indigo50"
+                android:background="@color/outline"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/switch_protect_apps"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -291,7 +291,7 @@
                 android:layout_width="2dp"
                 android:layout_height="28dp"
                 android:layout_marginEnd="12dp"
-                android:background="@color/indigo50"
+                android:background="@color/outline"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/ic_connection_settings"
                 app:layout_constraintTop_toTopOf="parent" />
