--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,28 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <style name="Theme.TorVPN" parent="Theme.Material3.DayNight.NoActionBar">
 
-        <item name="colorPrimary">@color/purpleDark</item>
-        <item name="colorOnPrimary">@color/textOnPrimary</item>
-
-        <item name="colorSecondary">@color/purpleDark</item>
-        <item name="colorOnSecondary">@color/textOnPrimary</item>
-
-        <item name="colorTertiary">@color/purpleDark</item>
-        <item name="colorOnTertiary">@color/textOnPrimary</item>
-
-        <item name="colorSurface">@color/purpleDark</item>
-        <item name="colorOnSurface">@color/textOnPrimary</item>
+        <item name="colorPrimary">@color/surface</item>
+        <item name="colorOnPrimary">@color/on_surface</item>
 
         <!-- Status bar color. -->
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
-        <item name="android:statusBarColor">@color/purpleDark</item>
+        <item name="android:statusBarColor">@color/surface</item>
 
         <item name="actionMenuTextColor">@color/tertiary</item>
         <item name="android:actionMenuTextColor">@color/tertiary</item>
 
         <!-- Customize your theme here. -->
 
-        <item name="android:colorBackground">@color/purpleDark</item>
+        <item name="android:colorBackground">@color/surface</item>
         <item name="colorError">@color/md_theme_error</item>
         <item name="colorOnError">@color/md_theme_onError</item>
 
