fix title colors, implement custom style to avoid code duplication

--- a/app/src/main/res/layout/fragment_app_routing.xml
+++ b/app/src/main/res/layout/fragment_app_routing.xml
@@ -30,14 +30,10 @@
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
-                style="?attr/collapsingToolbarLayoutLargeStyle"
+                style="@style/collapsing_toolbar_style"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
                 app:title="@string/apps"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
-                android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:toolbarId="@+id/toolbar">
 
                 <com.google.android.material.appbar.MaterialToolbar
