--- a/app/src/main/res/layout/fragment_configure.xml
+++ b/app/src/main/res/layout/fragment_configure.xml
@@ -30,13 +30,10 @@
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
-                style="?attr/collapsingToolbarLayoutLargeStyle"
+                style="@style/collapsing_toolbar_style"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
                 app:title="@string/action_configure"
-                android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
-                android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="noScroll"
                 app:toolbarId="@+id/toolbar">
 
