--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,9 +22,8 @@
         <item name="colorOnError">@color/md_theme_onError</item>
 
         <!--//We have explicitly defined these on Toolbars and BottomNav but adding here for consistency across the app in case future updates adds more toolbars-->
-        <item name="toolbarStyle">@style/Widget.Material3.Toolbar</item>
+        <item name="toolbarStyle">@style/toolbar_theme</item>
         <item name="bottomNavigationStyle">@style/Widget.Material3.BottomNavigationView</item>
-
 
     </style>
 
