fix connection button text padding

--- a/app/src/main/res/layout-land/fragment_connect.xml
+++ b/app/src/main/res/layout-land/fragment_connect.xml
@@ -123,6 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
+                android:paddingHorizontal="@dimen/compact_padding"
                 tools:background="@drawable/av_connect_to_cancel"
                 android:clickable="true"
                 android:elevation="0dp"
