hide exit node selection button in case TorVPN is not connected

--- a/app/src/main/res/layout-land/fragment_connect.xml
+++ b/app/src/main/res/layout-land/fragment_connect.xml
@@ -155,7 +155,9 @@
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="visible">
+                tools:visibility="visible"
+                android:visibility="@{viewModel.exitNodeSelectionVisibility}"
+                >
 
                 <ImageView
                     android:id="@+id/imageView5"
