--- a/app/src/main/res/layout/fragment_connect.xml
+++ b/app/src/main/res/layout/fragment_connect.xml
@@ -168,7 +168,8 @@
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:visibility="visible">
+                android:visibility="@{viewModel.exitNodeSelectionVisibility}"
+                tools:visibility="gone">
 
                 <ImageView
                     android:id="@+id/imageView5"
