chore: update content description

--- a/app/src/main/res/layout/include_connection_stats.xml
+++ b/app/src/main/res/layout/include_connection_stats.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="@dimen/stat_top_margin"
             android:background="@drawable/round_down_stat_bg"
             android:visibility="@{viewModel.connectionState == ConnectionState.CONNECTED ? View.VISIBLE: View.GONE}"
-            android:contentDescription="@string/up"
+            android:contentDescription="@string/up_content_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/up"
+                android:importantForAccessibility="no"
                 app:layout_constraintBottom_toTopOf="@+id/tv_up_traffic"
                 app:layout_constraintStart_toStartOf="@+id/tv_up_traffic"
                 app:layout_constraintTop_toTopOf="parent"
@@ -101,7 +102,7 @@
             android:layout_marginTop="4dp"
             android:background="@drawable/round_up_stat_bg"
             android:visibility="@{viewModel.connectionState == ConnectionState.CONNECTED ? View.VISIBLE: View.GONE}"
-            android:contentDescription="@string/down"
+            android:contentDescription="@string/down_content_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -155,6 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/down"
+                android:importantForAccessibility="no"
                 app:layout_constraintBottom_toTopOf="@+id/tv_down_traffic"
                 app:layout_constraintStart_toStartOf="@+id/tv_down_traffic"
                 app:layout_constraintTop_toTopOf="parent"
@@ -171,7 +173,7 @@
             android:background="@drawable/round_dialog_bg"
             android:onClick="@{() -> viewModel.appCardClicked()}"
             android:visibility="@{viewModel.appCardVisibility ? View.VISIBLE: View.GONE}"
-            android:contentDescription="@string/apps"
+            android:contentDescription="@{viewModel.appProtectionLabel}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cl_down_stat">
