--- a/app/src/main/res/layout/fragment_exit_selection_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_exit_selection_bottom_sheet.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="org.torproject.vpn.ui.exitselection.model.ExitSelectionBottomSheetViewModel" />
@@ -13,38 +14,46 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".ui.exitselection.ExitSelectionBottomSheetFragment"
-        android:paddingHorizontal="@dimen/activity_horizontal_margin"
-        app:layout_behavior="@string/bottom_sheet_behavior"
-        android:background="@drawable/bg_bottomsheet_container"
-        >
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/bottom_sheet_behavior">
 
-       <androidx.appcompat.widget.LinearLayoutCompat
-            android:orientation="vertical"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            android:theme="@style/Theme.TorVPN.AppBarOverlay"
+            app:elevation="0dp"
+            app:liftOnScroll="false">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:title="@string/exit_location"
+                app:navigationIcon="?attr/homeAsUpIndicator"
+                app:popupTheme="@style/Theme.TorVPN.PopupOverlay"
+                style="@style/collapsing_toolbar_style" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="top"
-            >
+            android:orientation="vertical"
+            android:paddingHorizontal="@dimen/default_padding"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <View
-                android:id="@+id/v_pull_container"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/default_padding"
-                android:layout_width="24dp"
-                android:layout_height="4dp"
-                android:background="@drawable/bg_pull_container"
-                android:layout_gravity="center_horizontal|top"
-                />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_exit_nodes"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/exitnode_item_view"
                 android:clipToPadding="false"
-                />
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/exitnode_item_view" />
         </androidx.appcompat.widget.LinearLayoutCompat>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
